solved the local file problem.  the file was relative to the css directory not the html directory.  working on extra paragraph spacing

--- a/css/dundonAdditions.css
+++ b/css/dundonAdditions.css
@@ -1,20 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
 #title-header {
-  background-image: url("https://shoesoptional.com/wp-content/uploads/2019/01/courtney-corlew-472715-unsplash.jpg"); /* The image used */
+  background-image: url("../img/courtney-corlew-472715-unsplash.jpg");
+
   background-color: #cccccc; /* Used if the image is unavailable */
   height: 350px; /* You must set a specified height */
   background-position: 90% 30%; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
 #main-title {
+	box-sizing: border-box;
 	font-size: 400%;
-	margin-bottom: 10px;
+	margin-top: 0;
 	margin-bottom: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	border: 0;
 }
 
 .main-subtitle {
+	box-sizing: border-box;
 	font-size: 150%;
 	margin-top: 0;
 	margin-bottom: 0;
+	padding-top: 0;
+	padding-bottom: 0;
+	border: 0;
 }
